# dotfiles

./: .Xresources  .bash_aliases  .bashrc  .clang-format  .commonrc  .gdbinit  .gitconfig  .gitignore  .gitmodules  .hgignore  .inputrc  .less.vimrc  .profile  .tmux.conf  .toprc  .urxvt_inputrc  .vimrc  .weechatrc  .xprofile  .xsessionrc  .zshrc  .zxdBashrc
.Xresources.d/: rxvt  xterm
.anacrontab/: tab
.anacrontab/daily/: create_tt.sh
.apprc/: download  pip3  repoRemoteLocal
.bash_it/custom/themes/dedowsdi/: dedowsdi.theme.bash
.compile/: terminus.sh  urxvt.sh  vim.sh
.config/: opengl.supp
.config/alacritty/: alacritty.yml
.config/gtk-3.0/: gtk.css
.config/nvim/: init.vim
.ctags.d/: cpp.ctags
.ddd/compile/: tmux.sh  urxvt.sh  vim.sh
.ddd/compile/st/: config.h
.ddd/doc/: Makefile
.ddd/mkt/cpp/: compile_commands.json
.ddd/mkt/cpp/.dedowsdi/: proj.sh
.ddd/mkt/cpp_cmake/: .exrc
.ddd/mkt/cpp_cmake/.dedowsdi/: cmake.sh  proj.sh
.ddd/mkt/cpp_lib/.dedowsdi/: proj.sh
.ddd/mkt/cpp_profile/: compile_commands.json  main.cpp
.ddd/mkt/cube/: CMakeLists.txt
.ddd/mkt/cube/.dedowsdi/: proj.sh
.ddd/mkt/gl43app/: main.cpp
.ddd/mkt/gl43app/.dedowsdi/: proj.sh
.ddd/mkt/matrix/: .exrc
.ddd/mkt/openal/: Config.cpp  Makefile  a.cpp
.ddd/mkt/openal/.dedowsdi/: proj.sh
.ddd/mkt/osg/: .exrc  CMakeLists.txt
.ddd/mkt/osg/.dedowsdi/: proj.sh
.ddd/mkt/osg/include/: OsgHelper.h
.ddd/mkt/osg/src/: OsgFactory.cpp  OsgHelper.cpp
.ddd/mkt/osg_cube/: main.cpp
.ddd/mkt/osg_gl2_cube/: .exrc  CMakeLists.txt  main.cpp
.ddd/rc/: app  repo
.ddd/script/: byzanz-record-window  clearcppbuild  gles  initcpppj  installdotfiles  lscolor  mkt  mktt  mycmake  pfsnap  readtagsi  readtagst  setuplinux  tagbar  tmuxdaily
.doc/: Makefile  ascii  ascii.md  ascii32.7  ascii32.md
.gdbinit.d/: glm_pretty_printer.py
.linuxrc/: apache  app  download  pip3  ppa  repo
.mkt_template/: .exrc  osg.frag
.mkt_template/cpp/: Makefile  a.cpp
.mkt_template/cpp/.dedowsdi/: proj.sh
.mkt_template/cpp/.dedowsdi/plugin/: init.vim
.mkt_template/cpp_cmake/: CMakeLists.txt  main.cpp
.mkt_template/cpp_cmake/.dedowsdi/: proj.json
.mkt_template/cpp_cmake/script/: cmake.sh
.mkt_template/cpp_lib/: CMakeLists.txt
.mkt_template/cpp_lib/.dedowsdi/plugin/: init.vim
.mkt_template/cpp_lib/mylib/: CMakeLists.txt
.mkt_template/cpp_profile/: CMakeLists.txt  timer.h
.mkt_template/cpp_profile/script/: cmake.sh
.mkt_template/cube/: .exrc  CMakeLists.txt  main.cpp
.mkt_template/cube/.dedowsdi/: proj.json
.mkt_template/cube/script/: cmake.sh
.mkt_template/gl43app/: .exrc  CMakeLists.txt
.mkt_template/matrix/: CMakeLists.txt  main.cpp
.mkt_template/matrix/script/: ctags.sh
.mkt_template/openal/: .exrc  Config.h  a.cpp
.mkt_template/openal/data/: al.cfg
.mkt_template/osg/.dedowsdi/: proj.sh
.mkt_template/osg/include/: OsgFactory.h
.mkt_template/osg/src/: main.cpp
.mkt_template/osg_cube/: .exrc  CMakeLists.txt
.mkt_template/osg_gl2_cube/: CMakeLists.txt
.mkt_template/osg_gl2_cube/script/: cmake.sh
.oh-my-zsh/custom/themes/: robbyrussell.zsh-theme
.script/: appInstall.sh  autoiconv  byzanz-record-window  clear_cpp_build  clearkernal  cmakeEclipse.sh  cpptt  elemIn.sh  gl_macro.sh  gles  hdoc  initcpppj  installdotfiles  lscolor  mkcpprtp  mkt  mktt  mkvimrtp  mycmake  mycpp  mycppproj  nnlf  osgdoc  pfsnap  pfsnap.sh  readcpptags  rminvalidlink.sh  script_util.sh  setup_linux.sh  setuplinux  tmux-daily  tmux_tt  tmuxdaily  tmuxmkt  tt  vpj.sh  workrest  xpaste.sh  zxdUtil.sh
.ssh/: config
.tt_template/cpp/: CMakeLists.txt  main.cpp
.tt_template/cpp/.vim/plugin/: init.vim
.tt_template/cpp_lib/: mylibConfig.cmake.in
.tt_template/cpp_lib/script/: cmake.sh
.tt_template/cpp_profile/script/: cmake.sh
.tt_template/cube/: main.cpp
.tt_template/cube/script/: cmake.sh
.tt_template/gl43app/: .gutctags  CMakeLists.txt  main.cpp
.tt_template/osg_cube/: Session.vim  main.cpp
.tt_template/osg_gl2_cube/script/: cmake.sh
.vim/ftplugin/: javascript.vim  vim.vim
.vim/ftplugin/cpp/: cfg.vim
.vim/plugin/: data.vim
bash/themes/dedowsdi/: dedowsdi.theme.bash
compile/: terminus.sh  urxvt.sh
compile/st/: config.h
home/: .agignore  .gitconfig  .gitignore  .hgignore  .vimrc  .zxdBashrc  .zxdCygwinBashrc  .zxdLinuxBashrc
home/.config/: osg.supp
home/.config/nvim/: init.vim
home/.template/: .template
home/.template/.script/: buildCppDependence.sh
home/.template/cpp/: .ycm_extra_conf.py  CMakeLists.txt  pj.sh
home/.template/cpp/.ropeproject/: globalnames
home/.template/cpp/script/: buildThirdlibs.sh  pj.vim
home/.template/cpp/vimScript/: pj.vim
home/.template/cpps/: CMakeLists.txt
home/.template/thirdlib/: OgreMain
home/vim/misc/: misc
list/: apache  app
misc/ftplugin/: vim.vim
misc/ftplugin/cpp/: cfg.vim
misc/plugin/: a.vim
project/common/: buildCppDependence.sh
project/mygui/: .gitignore  Makefile  resources.cfg
project/mygui/include/: BaseApplication.h  TutorialApplication.h
project/mygui/script/: pj.vim
project/mygui/src/: BaseApplication.cpp  TutorialApplication.cpp
project/ogre/: Makefile  main  ogre  ogre.cfg  resources.cfg
project/ogre/include/: BaseApplication.h
project/ogre/script/: pj.viminfo
project/ogre/src/: TutorialApplication.cpp
project/ogrec/script/: pj.vim
project/ogrec/src/: BaseApplication.cpp
project/ogrec/thirdlib/: OgreCommon  OgreMain  overlay
project/simple/: TAGS
project/simple/script/: buildThirdlibs.sh  pj.viminfo
rc/: apache  pip3  repo
script/: cpptt  initpj.sh  jscombined.sh  tmux_cpptt  tt  workrest  zxdLinux.sh
script/bash/: .app.swp  .zxdBashrc  .zxdLinux.sh.swp  app  appInstall.sh  autoiconv.sh  bakup.sh  buildBoost.sh  buildCppDependence.sh  buildSymbolicLink.sh  buildctags.sh  cleanCmakeErrorBuild.sh  cmakeEclipse.sh  download  elemIn.sh  glcp.sh  initpj.sh  ppa  renameCubeMap.sh  repoClone.sh  repoRemoteLocal  seqrename.sh  vpj.sh  zxdLinux.sh  zxdUtil.sh
script/bash/temp/: getopts_sample.sh
system/: TAGS  system.sh
(+34 files in other folders)
